laborations/lab2/testsuite/bad/cmp-ass-bool-or-int.cc
int main () {
  int x = false || 45;
  return 0;
}
